<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="41dp"
        android:text="@string/Centro_costo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="29dp"
        android:text="@string/Descripcion"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="29dp"
        android:text="@string/Empresa"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Custodio"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="41dp"
        android:text="@string/Codigo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginBottom="21dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:logo="@mipmap/ic_launcher_round"
        app:title="Menarini"/>


</androidx.constraintlayout.widget.ConstraintLayout>